[gd_scene load_steps=5 format=2]

[ext_resource path="res://tres/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/Wallet.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Wallet" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="CenterC" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Panel" parent="CenterC"]
margin_left = 256.0
margin_right = 1024.0
margin_bottom = 768.0
rect_min_size = Vector2( 768, 768 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 2 )

[node name="VBoxC" type="VBoxContainer" parent="CenterC/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="CenterC/Popup/VBoxC"]
margin_right = 768.0
margin_bottom = 636.0
size_flags_vertical = 3
hide_root = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Use" type="Button" parent="CenterC/Popup/VBoxC"]
margin_top = 640.0
margin_right = 768.0
margin_bottom = 768.0
rect_min_size = Vector2( 0, 128 )
text = "使用"

[connection signal="gui_input" from="." to="." method="_on_Wallet_gui_input"]
[connection signal="visibility_changed" from="." to="." method="_on_Wallet_visibility_changed"]
[connection signal="gui_input" from="CenterC" to="." method="_on_CenterC_gui_input"]
